2004-11-26  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* emacs/mhc-cvs.el (mhc-cvs/backend): Handle non-number return
	value of call-process.

2004-11-15  KOIE Hidetaka <hide@koie.org> / nom

	* ruby-ext/mhc_pilib.c
	(rpi_sock_listen): password hack for Palm OS 4.x.

2004-10-28  NOGUCHI Yusuke <nogunogu@mva.biglobe.ne.jp> / nom

	* emacs/mhc-guess.el: improvement of mhc-guess-location-regexp-list

2004-10-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* ruby-ext/lib/mhc-schedule.rb (MON_LONG_REGEX, WEK_LONG_REGEX):
	New constants.
	(MhcScheduleItem#add_cond, MhcScheduleItem#parse_xsc_headers):
	Accept full names of months and days of week, as well as shortened
	names.

	* ruby-ext/lib/mhc-date.rb (M_LONG_LABEL, W_LONG_LABEL): New
	constants.

	* .cvsignore:
	* ruby-ext/.cvsignore:
	* ruby-ext/lib/.cvsignore: New files.

	* emacs/.cvsignore: Add make.rb.

2004-10-24  Fumihiro Kato  <fumihiro@sfc.keio.ac.jp>

	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem#select_headers):
	Initialize headers with null strings instead of undefined values.

2004-10-07  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-summary.el (mhc-use-month-separator): Support number
	of width.
	(mhc-summary/insert-separator): Display 'cw' number on monthly
	separator if it start of week.

	* emacs/mhc.el (mhc-scan-month): Insert a weekly separator instead
	a monthly separator when don't use monthly separator.
	Display 'cw' number on monthly separator if it start of week.

2004-09-16  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/make.rb.in: Fix '--with-mew' option.

2004-09-13  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-goto-today): Execute beginning-of-line();
	Emacs-21.3.50 something wrong?

	* emacs/mhc-mew.el (mhc-mew-summary-mode-setup): Fix last change.

2004-09-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc.el (mhc-edit): Remove schedule headers just before
	inserting new schedule headers.

	* emacs/mhc-db.el (mhc-db-add-exception-rule): Call